--- a/style.css
+++ b/style.css
@@ -13,33 +13,30 @@ body{
     align-items: center;
     background-color: rgb(41, 41, 41);
     color: white;
+    background-image: url('backgroundspace.jpg');
+    background-size: cover;
 }
 
-.container{
-    border: solid;
-    border-color: white;
-    border-radius: 10px;
-    display: block;
-    width: 900px;
-    overflow: auto;
-    margin-top: -50px;
-    text-align: center;
-    background-color:rgba(90, 90, 90, 0.13);
-}
+
 
 .location,
 .temperature{
     height: 30vh;
-    width: 50%;
     display: block;
     justify-content: space-around;
     align-items: center;
 }
+.location,
 .temperature{
     flex-direction: column;
-    width: 100%;
-    text-align: center;
+    width: 70%;
+    text-align: right;
 
+}
+.weather{
+    display: block;
+    width: 70%;
+    text-align: right;
 }
 
 .temperature.degree-section {
@@ -55,6 +52,7 @@ body{
     font-size: 40px;
     color: #ff8040;
     width: 10%;
+    font-family: sans-serif;
 }
 
  h2{
@@ -62,15 +60,19 @@ body{
     width: 400px;
 
 }
+h3{
+    color: gray;
+    font-family: sans-serif;
+}
 
 .location-timezone{
-    margin-top: 100px;
-    color: rgb(0, 0, 0);
+    margin-top: 10px;
+    font-family: sans-serif;
 }
 
 .location{
-    text-align: center;
-    width: 100%;
+    text-align: left;
+    width: 80%;
 }
 
 .icon{
@@ -80,8 +82,36 @@ body{
 
 .temperature-description{
     margin-top: 20px;
+    font-size: 24px;
+    font-family: sans-serif;
 }
 
 .temperature-degree{
     width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+    .container{
+        width: 100%;
+    }
+    .temperature{
+        flex-direction: column;
+        width: 50%;
+        text-align: left;
+    
+    }
+    .location-timezone{
+        font-size: 20px;
+    }
+    .weather{
+        display: block;
+        width: 50%;
+        text-align: right;
+    }
+    .temperature-description{
+        margin-top: 20px;
+        text-align: left;
+        font-size: 24px;
+    }
+    
+  }
